--- a/package.json
+++ b/package.json
@@ -14,27 +14,31 @@
   "author": "Thomas Bassetto <tbassetto@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer-stylus": "^0.9.4",
+    "autoprefixer-stylus": "^0.10.0",
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "gray-matter": "^2.0.2",
-    "helmet": "^2.1.2",
-    "highlight.js": "^9.6.0",
+    "helmet": "^2.3.0",
+    "highlight.js": "^9.7.0",
     "jade": "^1.11.0",
-    "lodash": "^4.15.0",
+    "lodash": "^4.16.3",
     "marked": "^0.3.6",
-    "moment": "^2.14.1",
-    "normalize.css": "^4.2.0",
-    "pug": "^2.0.0-beta5",
+    "moment": "^2.15.1",
+    "normalize.css": "^5.0.0",
+    "pug": "^2.0.0-beta6",
     "slug": "^0.9.1",
     "stylus": "^0.54.5"
   },
   "devDependencies": {
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb-base": "^5.0.2",
-    "eslint-plugin-import": "^1.13.0",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-node": "^2.1.2",
     "nodemon": "^1.10.2",
     "pug-lint": "^2.3.0",
     "pug-lint-config-clock": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=4"
   }
 }
