--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "highlight.js": "^9.7.0",
     "jade": "^1.11.0",
     "lodash": "^4.16.3",
-    "marked": "^0.3.6",
+    "markdown-it": "^8.0.0",
     "moment": "^2.15.1",
     "normalize.css": "^5.0.0",
     "pug": "^2.0.0-beta6",
